// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit test comic card should render correctly 1`] = `
<Row
  className="justify-content-center info"
  noGutters={false}
>
  <Col
    lg={8}
    md={8}
    sm={12}
    xs={12}
  >
    <div
      className="alert alert-info text-center"
    >
      loading....
    </div>
  </Col>
</Row>
`;

exports[`unit test comic card should show card item 1`] = `
<Row
  className="justify-content-center info"
  noGutters={false}
>
  <Col
    lg={8}
    md={8}
    sm={12}
    xs={12}
  >
    <div
      className="card animate__animated animate__bounce justify-content-center"
    >
      <Cards
        img="https://imgs.xkcd.com/comics/woodpecker.png"
        title="Woodpecker"
      />
    </div>
  </Col>
</Row>
`;
